--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,21 @@
 body {
-    background: #e96443;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #904e95, #e96443);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #904e95, #e96443); 
+    width:100%;
+    height: 100%;
+    background: linear-gradient(45deg,#F17C58, #E94584, #24AADB , #27DBB1,#FFDC18, #FF3706);
+    background-size: 600% 100%;
+    animation: gradient 16s linear infinite;
+    animation-direction: alternate;
 }
+@keyframes gradient {
+    0% {background-position: 0%}
+    100% {background-position: 100%}
+}
+}
+
+.text-center{
+    font-weight: bold;
+}
+
 .btn.btn-raised.btn-primary {
     background-color: #00838F!important;
     font-size: 16px;
@@ -15,6 +28,9 @@ header {
     text-transform: uppercase;
     font-weight: bold;
     color: white;
+}
+p{
+   font-weight: bold; 
 }
 
 header h1 {
@@ -29,7 +45,7 @@ header h1 {
     text-align: center;
     color: #F4511E;
     font-size: small;
-    font: bold;
+    font-weight: bold;
 }
 
 .correcto {
@@ -37,9 +53,34 @@ header h1 {
     border: 1px solid rgb(64, 200, 5);
     padding: 10px;
     margin-bottom: 20px;
-    text-align: center;
+    
     color: rgb(4, 150, 50);
+    font-weight: bold;
 }
+.loading {
+    font-size: 20px;
+}
+
+.loading:after {
+    content: "\2026";
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: bottom;   
+    animation: ellipsis-dot 1s infinite;
+    animation-fill-mode: fowards;
+    width: 1.25em;
+}
+
+@keyframes ellipsis-dot {
+    50% {    
+      width: 0em;
+    }
+    100% {
+      width: 1em;
+    }
+}
+
+
 .error p {
     margin:0;
 }
